Revision history for Perl extension XML::Smart.

1.73  2013-1-28
    - Fixed bug 17834 in Tree.pm
    - Fixed object copy bug 34695
    - Updated POD to reflect where obj copy is not supported.
    - Fixed object Deep copy bug ( bug id 56806 ) 
    - Fixed Mem leak and added tests.

1.71  2013-1-26
    - Updated all pm to use strict and warnings
    - Updated tests to use strict and warnings 
    - Added basic tests such as load
    - Moved tests to t/
    - Gramatical Corrections to POD
    - Removed binary data from POD ( bug id 53321 ) 
    - Updated list of binary data thats handled. 
    - Tree.pm updated to allow warnings after usage ( patch from bug ticket id: 27310 )
    - XML encoding declaration changed from utf-8 to UTF-8 ( bug id 76668 )
    - Fixed URL tests ( bug id 34562 fix provided )
    - Check added for existence of object in destructor ( bug id 62091 fix provided )

1.6.9 2004-9-21
    - dump_tree() and similars methods will dump hash keys sorted now.
    - Hooks on_start, on_char and on_end for the parser will receive the parser object too.


1.6.8 2004-8-3
    - Fixed minor bug for order of keys and new multiple elements.
    - Fixed assigment of content with the method content() for new trees.
    - Added order to the attributes when using apply_dtd().
    - Fixed apply_dtd() when we have an ELEMENT and an ATTRIBUTE with the same name.


1.6.7 2004-7-19
    - Fixed minor bug with internal flag {null}. use as a boolean, and not as defined {null} changed.
    - Fixed minor bug with data_pointer() and root element name.


1.6.6 2004-7-8
    - Fixed minor bug on content order for multiple contents and null contents chunks.
    - Fixed wrong creation of key in the tree when using is_node() for null pointers.


1.6.5 2004-5-29
    - Fixed some minor bug for the bugged Perl 5.8.0.


1.6.4 2004-5-29
    - ReFixed minor bug on internal function _is_unicode().


1.6.3 2004-5-29
    - Fixed minor bug on internal function _is_unicode().
    
