@@ -6,6 +6,8 @@ Revision history for Perl extension XML::Smart.
     - Updated POD to reflect where obj copy is not supported.
     - Fixed object Deep copy bug ( bug id 56806 ) 
     - Fixed Mem leak and added tests.
+    - Added ANNIHILATE for better object destruction
+    - Fixed Encoding errors, added tests and added to pod
 
 1.71  2013-1-26
     - Updated all pm to use strict and warnings
